2008-02-07  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextEditor.cs, Mono.TextEditor/TextEditorOptions.cs: Color
	  styles are now in options.

2008-02-06  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextEditor.cs: Worked on printing.

2008-02-05  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/Document.cs, Mono.TextEditor/FoldingType.cs,
	  Mono.TextEditor/TextEditor.cs, Mono.TextEditor/FoldSegment.cs: Added
	  some folding commands.

2008-02-05  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/DefaultEditActions.cs, Mono.TextEditor/Document.cs,
	  Mono.TextEditor/Caret.cs, Mono.TextEditor/FoldSegment.cs: Improved
	  folding behavior.

2008-02-05  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextEditor.cs: Changed bracket highlighting in selected
	  regions.

2008-02-05  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextEditor.cs: Fixed click on invalid line bug.

2008-02-04  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor.Highlighting/SyntaxModeService.cs: Fixed highlighting
	  panel.

2008-02-04  Mike Krüger <mkrueger@novell.com> 

	* TangoStyle.xml: Tango bracket matching has now better colors.

2008-02-04  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor.mdp, TangoStyle.xml, OblivionStyle.xml,
	  Mono.TextEditor/TextUtil.cs, Mono.TextEditor/TextEditor.cs,
	  Mono.TextEditor/TextEditorOptions.cs,
	  Mono.TextEditor.Highlighting/SyntaxModeService.cs,
	  Mono.TextEditor.Highlighting/Style.cs, Makefile.am: Implemented bracket
	  matching.

2008-02-04  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/DefaultEditActions.cs: Implemented Bug 354129 - Auto add
	  second brackets, quotation mark.

2008-02-04  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/DefaultEditActions.cs, Mono.TextEditor/Document.cs:
	  Implemented Bug 313786 - New editor needs to handle cr/lf issues,
	  encoding.

2008-02-04  Mike Krüger <mkrueger@novell.com> 
